@@ -17,6 +17,8 @@ Bugs fixed
 ----------
 
 * #8164: autodoc: Classes that inherit mocked class are not documented
+* #8616: autodoc: AttributeError is raised on non-class object is passed to
+  autoclass directive
 
 Testing
 --------
